--- a/examples/basics/multi_inputs.toml
+++ b/examples/basics/multi_inputs.toml
@@ -21,7 +21,7 @@ data_dir = "/var/lib/vector"
 
 # Sample the data to save on cost
 [transforms.sampler]
-  inputs       = ["apache_parser", "nginx"]
+  inputs       = ["nginx", "apache_parser"]
   type         = "sampler"
   rate         = 50                            # only keep 50%
 
