--- a/examples/toml/mini.toml
+++ b/examples/toml/mini.toml
@@ -5,6 +5,13 @@ data_dir = "/var/lib/vector"
   include = ["/var/log/apache2/*.log"]
   type = "file"
 
+[transforms.apache_lua]
+  inputs = [ ]
+  type = "lua"
+  version = "2"
+  [transforms.apache_lua.hooks]
+    process = "function (event, emit)\n  -- event.log.field = \"value\" -- set value of a field\n  -- event.log.another_field = nil -- remove field\n  -- event.log.first, event.log.second = nil, event.log.first -- rename field\n\n  -- Very important! Emit the processed event.\n  emit(event)\nend\n"
+
 [transforms.apache_parser]
   inputs = ["apache_logs"]
   regex = "^(?P<host>[w.]+) - (?P<user>[w]+) (?P<bytes_in>[d]+) [(?P<timestamp>.*)] \"(?P<method>[w]+) (?P<path>.*)\" (?P<status>[d]+) (?P<bytes_out>[d]+)$"
@@ -50,8 +57,6 @@ data_dir = "/var/lib/vector"
   type = "prometheus"
 
 [sinks.s3_archives]
-  [sinks.s3_archives.batch]
-    max_size = 10000000
   bucket = "my-log-archives"
   compression = "gzip"
   encoding = "ndjson"
@@ -59,5 +64,7 @@ data_dir = "/var/lib/vector"
   key_prefix = "date=%Y-%m-%d"
   region = "us-east-1"
   type = "aws_s3"
+  [sinks.s3_archives.batch]
+    max_size = 10000000
 
 
