--- a/examples/basics/routes.toml
+++ b/examples/basics/routes.toml
@@ -58,7 +58,9 @@ region = "us-east-1"
 bucket = "my-log-archives"
 key_prefix = "date=%Y-%m-%d" # daily partitions, hive friendly format
 compression = "gzip" # compress final objects
-encoding = "ndjson" # new line delimited JSON
+
+[sinks.s3_archives.encoding]
+codec = "json"
 
 [sinks.s3_archives.batch]
 max_size = 10000000 # 10mb uncompressed
